# CompuFest-1-Workshop

./: README.md  main.py  pyproject.toml  requirements.txt
DeepAgents/: 01_HelloWorld.py  02_MultipleTools.py  03_AgentMemory.py
LangChain/: 01_PromptTemplate.py  02_Chain.py  03_SequentialChain.py
LangGraph/: 01_SimpleNode.py  02_LogicRouter.py  03_LoopGraph.py
